force-app/main/default/objects/Factura_devuelta__c/Factura_devuelta__c.object-meta.xml
<CustomObject>
    <label>Factura devuelta</label>
    <nameField>
        <label>Nombre de Factura devuelta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facturas devueltas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>