force-app/main/default/objects/Factura_devuelta__c/fields/Cod_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Cod_Empresa__c</fullName>
    <label>Cod_Empresa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>