force-app/main/default/objects/Factura_devuelta__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OP</fullName>
                <label>Impagada</label>
            </value>
            <value>
                <fullName>CL</fullName>
                <label>Cobrada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>