force-app/main/default/objects/Factura_devuelta__c/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <label>Factura</label>
    <referenceTo>Factura__c</referenceTo>
    <relationshipLabel>Facturas devueltas</relationshipLabel>
    <relationshipName>Facturas_devueltas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>