force-app/main/default/objects/Factura_devuelta__c/fields/Id_del_recibo__c.field-meta.xml
<CustomField>
    <fullName>Id_del_recibo__c</fullName>
    <label>Id del recibo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>