force-app/main/default/objects/Factura_devuelta__c/fields/Importe_original__c.field-meta.xml
<CustomField>
    <fullName>Importe_original__c</fullName>
    <label>Importe original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>