force-app/main/default/objects/Factura_devuelta__c/fields/Numero_de_factura__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_factura__c</fullName>
    <externalId>true</externalId>
    <label>Número de factura</label>
    <length>37</length>
    <type>Text</type>
</CustomField>