force-app/main/default/objects/Factura_devuelta__c/fields/OportunidadVinculada__c.field-meta.xml
<CustomField>
    <fullName>OportunidadVinculada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad Vinculada</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Facturas devueltas</relationshipLabel>
    <relationshipName>Facturas_devueltas</relationshipName>
    <type>Lookup</type>
</CustomField>