force-app/main/default/objects/Factura_devuelta__c/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promocion</label>
    <referenceTo>Promocion__c</referenceTo>
    <relationshipLabel>Facturas devueltas</relationshipLabel>
    <relationshipName>Facturas_devueltas</relationshipName>
    <type>Lookup</type>
</CustomField>