force-app/main/default/objects/Factura_devuelta__c/fields/Tipo_de_factura__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_factura__c</fullName>
    <label>Tipo de factura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Factura</valueSetName>
    </valueSet>
</CustomField>